--- a/01-wordpress.yml
+++ b/01-wordpress.yml
@@ -1,7 +1,8 @@
 version: "3.9"
  
 services:
-  db:
+
+  db_01:
     image: mysql:5.7
     volumes:
       - db_data:/var/lib/mysql
@@ -12,20 +13,21 @@ services:
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
  
-  wordpress:
+  wordpress_01:
     depends_on:
       - db
     image: wordpress:latest
     volumes:
       - wordpress_data:/var/www/html
     ports:
-      - "8000:80"
+      - "8080:80"
     restart: always
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
+
 volumes:
   db_data: {}
   wordpress_data: {}
