--- a/01-wordpress.yml
+++ b/01-wordpress.yml
@@ -3,9 +3,9 @@ version: "3.9"
 services:
 
   db_01:
-    image: mysql:5.7
+    image: mysql
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data_01:/var/lib/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: somewordpress
@@ -29,5 +29,5 @@ services:
       WORDPRESS_DB_NAME: wordpress
 
 volumes:
-  db_data: {}
+  db_data_01: {}
   wordpress_data: {}
