--- a/01-wordpress.yml
+++ b/01-wordpress.yml
@@ -15,19 +15,19 @@ services:
  
   wordpress_01:
     depends_on:
-      - db
+      - db_01
     image: wordpress:latest
     volumes:
-      - wordpress_data:/var/www/html
+      - wordpress_data_01:/var/www/html
     ports:
-      - "8080:80"
+      - "8000:80"
     restart: always
     environment:
-      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_HOST: db_01:3306
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
 
 volumes:
   db_data_01: {}
-  wordpress_data: {}
+  wordpress_data_01: {}
