--- a/04-wordpresswork.yml
+++ b/04-wordpresswork.yml
@@ -21,6 +21,8 @@ services:
 
   wordpress:
     image: wordpress:latest
+    ports:
+      - 80:80
     volumes:
       - wp_data:/var/www/html
     restart: always
